--- a/webpage3.html
+++ b/webpage3.html
@@ -29,7 +29,7 @@
 </div>
 <div class="pastries">  
 <img src="cinnamon_roll.jpeg" alt="cinnamon">
-<p>cinnamon_roll</p>
+<p>cinnamon roll</p>
 <p>£2.25</p>
 </div>
 <div class="pastries"> 
